--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-  box-sizing: border-box;
-}
-
-body {
-  width: 100%;
-  background-color: hsl(30, 38%, 92%);
-}
+*{box-sizing:inherit;margin:0;padding:0}html{box-sizing:border-box;font-size:62.5%}body{align-items:center;background-color:#f2ebe3;display:flex;font-family:Montserrat,sans-serif;font-size:1.4rem;font-weight:500;justify-content:center;line-height:1.6;width:100%}.container{border-radius:1rem;display:grid;margin:10vh auto;overflow:hidden;width:32rem}@media only screen and (min-width:26.25em){.container{width:39rem}}@media only screen and (min-width:37.5em){.container{grid-template-columns:repeat(2,1fr);width:56rem}}@media only screen and (min-width:75em){.container{width:60rem}}.heading-primary{color:#1c232b;font-family:Fraunces,serif;font-size:3.6rem;font-weight:700;line-height:1}.btn{align-items:center;border-radius:1rem;color:#fff;display:flex;font-family:Montserrat,sans-serif;font-weight:700;gap:1.2rem;justify-content:center;padding:1.2rem 2.4rem;text-decoration:none}.btn__icon{display:block;height:1.6rem;width:1.6rem}.btn:link,.btn:visited{background-color:#3c8067}.btn:active,.btn:hover{background-color:#1b4133}.product__img{align-items:center;background-size:cover;display:flex;justify-content:center;width:100%}.product__img img,.product__img source{display:block;width:110%}.product__info{background-color:#fff;display:flex;flex-direction:column;gap:1rem;padding:2.4rem}@media only screen and (min-width:37.5em){.product__info{justify-content:center;padding:2.8rem}}@media only screen and (min-width:90em){.product__info{gap:2.4rem;padding:2.4rem}}.product__category{color:#6c7289;font-size:1.2rem;letter-spacing:.5rem;text-transform:uppercase}.product__description{color:#6c7289}.product__price{align-items:center;display:flex;gap:1.6rem}.product__price--sale{color:#3c8067;font-family:Fraunces,serif;font-size:3.6rem;font-weight:700}.product__price--standard{color:#6c7289;text-decoration:line-through}
