--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,30 @@
+// Colors
+
+$color-primary-light: hsl(158, 36%, 37%);
+$color-primary-dark: hsl(158, 42%, 18%);
+
+$color-black: hsl(212, 21%, 14%);
+$color-grey: hsl(228, 12%, 48%);
 $color-cream: hsl(30, 38%, 92%);
+$color-white: hsl(0, 0%, 100%);
+
+// Typography
+
+$font-size-small: 1.2rem;
+$font-size-par: 1.4rem;
+$font-size-large: 3.6rem;
+
+$font-family-mont: "Montserrat", sans-serif;
+$font-family-frau: "Fraunces", serif;
+
+// Media Queries
+
+$screen-size-smallest: 24em;
+$screen-size-smaller: 26.25em;
+$screen-size-small: 37.5em;
+$screen-size-medium: 56.25em;
+$screen-size-large: 75em;
+$screen-size-largest: 90em;
 
 * {
   margin: 0;
@@ -13,5 +39,138 @@ html {
 
 body {
   width: 100%;
+  font-family: $font-family-mont;
+  font-size: $font-size-par;
+  font-weight: 500;
+  line-height: 1.6;
   background-color: $color-cream;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 32rem;
+  margin: 10vh auto;
+  border-radius: 1rem;
+
+  display: grid;
+  overflow: hidden;
+
+  @media only screen and (min-width: $screen-size-smaller) {
+    width: 39rem;
+  }
+  @media only screen and (min-width: $screen-size-small) {
+    width: 56rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media only screen and (min-width: $screen-size-large) {
+    width: 60rem;
+  }
+}
+
+.heading-primary {
+  font-family: $font-family-frau;
+  font-size: $font-size-large;
+  line-height: 1;
+  font-weight: 700;
+  color: $color-black;
+}
+
+.btn {
+  padding: 1.2rem 2.4rem;
+  border-radius: 1rem;
+  font-family: $font-family-mont;
+  text-decoration: none;
+  color: $color-white;
+  font-weight: 700;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+
+  &__icon {
+    display: block;
+    height: 1.6rem;
+    width: 1.6rem;
+  }
+
+  &:link,
+  &:visited {
+    background-color: $color-primary-light;
+  }
+
+  &:hover,
+  &:active {
+    background-color: $color-primary-dark;
+  }
+}
+
+.product {
+  &__img {
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+
+    & source {
+      width: 110%;
+      display: block;
+    }
+    & img {
+      width: 110%;
+      display: block;
+    }
+  }
+
+  &__info {
+    padding: 2.4rem;
+    background-color: $color-white;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    @media only screen and (min-width: $screen-size-small) {
+      padding: 2.8rem;
+      justify-content: center;
+    }
+
+    @media only screen and (min-width: $screen-size-largest) {
+      padding: 2.4rem;
+      gap: 2.4rem;
+    }
+  }
+
+  &__category {
+    font-size: $font-size-small;
+    color: $color-grey;
+    letter-spacing: 0.5rem;
+    text-transform: uppercase;
+  }
+
+  &__description {
+    color: $color-grey;
+  }
+
+  &__price {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+
+    &--sale {
+      font-family: $font-family-frau;
+      font-size: $font-size-large;
+      font-weight: 700;
+      color: $color-primary-light;
+    }
+
+    &--standard {
+      text-decoration: line-through;
+      color: $color-grey;
+    }
+  }
 }
